# mlops-zoomcamp-2025

./: README.md  main.py  pyproject.toml
01-intro/: duration-prediction.ipynb  homework-01.ipynb  pyproject.toml  utils.py
02-experiment-tracking/: .gitignore  README.md  main.py  pyproject.toml
02-experiment-tracking/homework/: download_data.py  hpo.py  register_model.py  train.py
03-orchestration/: .gitignore  README.md  main.py  pyproject.toml
03-orchestration/dagster-pipeline/: assets.py
03-orchestration/data/: mlflow.db
04-deployment/: .gitignore  Dockerfile  Pipfile  README.md  score.ipynb  score.py
05-monitoring/: .gitignore  README.md  docker-compose.yml  dummy_metrics_calculation.py  main.py  notes.md  pyproject.toml
06-best-practices/: notes.md
06-best-practices/homework/: .gitignore  Pipfile  batch.py  docker-compose.yaml
06-best-practices/homework/integration_test/: integration_test.py  run.sh
06-best-practices/homework/tests/: __init__.py  test_batch.py
06-best-practices/streaming/: Pipfile  lambda_function.py  model.py
06-best-practices/streaming/tests/: model_test.py
environment-setup/: setup.sh
