[project]
name = "mlops-zoomcamp-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastparquet>=2024.11.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[tool.uv.workspace]
members = [
    "02-experiment-tracking",
]
