[project]
name = "mlops-zoomcamp-2025-03-orchestration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.10.19",
    "dagster-webserver>=1.10.19",
    "fastparquet>=2024.11.0",
    "flask>=2.2.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
]
