[project]
name = "05-monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "evidently>=0.7.8",
    "joblib>=1.5.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "prefect>=3.4.6",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "pyarrow>=19.0.1",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
]
